test/cases/x86_64-linux/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-linux
//
// :109:9: error: struct 'tmp.tmp' has no member named 'main'
// :7:1: note: struct declared here
